# Proiect_OOP_C

./: CMakeLists.txt  main.c
Domain/: medicament.c  medicament.h
Repository/: medicament_repo.c  medicament_repo.h
Service/: medicament_service.c  medicament_service.h
Tests/: test_repo.c  test_repo.h  test_service.c  test_service.h
UI/: medicament_ui.c  medicament_ui.h
Undo/: undo.c  undo.h
Utils/: useful_functions.c  useful_functions.h
Validator/: validate.c  validate.h
